# LearnOpenGL

./: CMakeLists.txt  README.md  build.bat
3rdLib/lib/: SOIL.lib  glew32d.lib  glew32sd.lib  glfw3.lib
cmake_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  opengl.ilk
include/: Shader.h
resource/: shader.frag  shader.vs
src/: Shader.cpp  camera.cpp  main.cpp
